[project]
name = "my-acp-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "acp-sdk>=1.0.0",
    "colorama>=0.4.6",
    "crewai>=0.140.0",
    "crewai-tools>=0.49.0",
    "load-dotenv>=0.1.0",
    "nest-asyncio>=1.6.0",
]
